new paper uploaded

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -100,14 +100,21 @@ redirect_from:
     </div>
 
     <div class="paper">
-        <p class="paper-title">Life-cycle Health Effects of Compulsory Schooling</p>
+        <p class="paper-title"><a href="https://s3joholl.github.io/files/education_lifecycle_effects.pdf">Life-cycle
+                Health Effects of Compulsory Schooling</a></p>
         <p class="paper-info">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
-        <p>In preparation</p>
-        <!-- <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
+        <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            [Abstract text goes here. Please add the abstract if available.]
-        </div> -->
+            We study the effect of education on health (hospital stays, number of diagnosed conditions, self-rated poor
+            health, and obesity) over the life-cycle using German compulsory schooling reforms as a source of exogenous
+            variation. Our results show clear correlations between educational attainment and better health across all
+            age groups (30 to 79). However, we do not find causal effects of an additional year of schooling on health
+            or health care utilization, neither earlier, nor later in life. One reason for this may be that while the
+            compulsory schooling reforms succeeded in raising the educational attainment of those that were targeted —
+            individuals at the lowest education margin — they did not result in healthier employment opportunities.
+        </div>
     </div>
+
 
     <h1>Journal Articles</h1>
 
