--- a/_pages/research.html
+++ b/_pages/research.html
@@ -121,8 +121,8 @@ redirect_from:
     <h2>Economics and General Interest</h2>
 
     <div class="paper">
-        <p class="paper-title"><a href="https://www.nature.com/articles/s41598-024-74692-y">The impact of retirement
-                on loneliness in Europe</a></p>
+        <p class="paper-title"><a href="https://www.nature.com/articles/s41598-024-74692-y">The Impact of Retirement
+                on Loneliness in Europe</a></p>
         <p class="paper-info">with Sophie Guthmuller, Dörte Heger and Anna Werbeck</p>
         <p><i>Scientific Reports</i>, 2024, Vol. 14, Article number: 26971</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
@@ -144,7 +144,7 @@ redirect_from:
 
     <div class="paper">
         <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S2211883724000674">A
-                nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar</a></p>
+                Nationwide Digital Maturity Assessment of Hospitals: Results From the German DigitalRadar</a></p>
         <p class="paper-info">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander Haering
         </p>
         <p><i>Health Policy and Technology</i>, 2024, Vol. 13(4)</p>
@@ -177,8 +177,8 @@ redirect_from:
 
     <div class="paper">
         <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228">The
-                association of hospital profitability and digital maturity – An explorative study using data from the
-                German DigitalRadar project</a></p>
+                Association of Hospital Profitability and Digital Maturity – An Explorative Study Using Data From the
+                German DigitalRadar Project</a></p>
         <p class="paper-info">with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler</p>
         <p><i>Health Policy</i>, 2024, Vol. 142</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
