--- a/_pages/research.html
+++ b/_pages/research.html
@@ -83,7 +83,7 @@ redirect_from:
                 href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_24_1105.pdf">Gene-Environment
                 Interactions with Essential Heterogeneity</a></p>
         <p class="paper-info">with Hendrik Schmitz and Matthias Westphal</p>
-        <p><i>Ruhr Economic Papers</i> #1105 (September 2024)</p>
+        <p>Revision requested,<i>The Economic Journal</i></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             We show that two-stage least squares (2SLS) estimates of interactions can be misleading in settings with
