added teaching site again

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -38,18 +38,16 @@ redirect_from:
 
 <body>
 
-    <p>In summer 2025, I'll be TA for Microeconometrics (graduate) and Applied Statistics for Industrial Engineering
-        (undergrad) at Paderborn University.</p>
-
     <h2>Teaching Assistance</h2>
     <ul>
-        <li>Microeconometrics (graduate), Paderborn University, Summer 2024</li>
+        <li>Statistics for Business Informatics, Paderborn University, Summer 2025</li>
+        <li>Microeconometrics (graduate), Paderborn University, Summer 2024, Summer 2025</li>
         <li>Empirical Economics (undergrad), Paderborn University, Summer 2024</li>
         <li>Health Care Systems (graduate), University of Duisburg-Essen, Summer 2024</li>
     </ul>
 
     <h2>Supervision</h2>
-    <p>So far, I've supervised two empirical Master theses in health economics at Paderborn University.</p>
+    <p>So far, I've supervised three empirical Master theses in health and behavioral economics at Paderborn University.</p>
 
 </body>
 
