--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -40,7 +40,7 @@ redirect_from:
 
     <h2>Teaching Assistance</h2>
     <ul>
-        <li>Statistics for Business Informatics, Paderborn University, Summer 2025</li>
+        <li>Statistics for Business Informatics (undergrad), Paderborn University, Summer 2025</li>
         <li>Microeconometrics (graduate), Paderborn University, Summer 2024, Summer 2025</li>
         <li>Empirical Economics (undergrad), Paderborn University, Summer 2024</li>
         <li>Health Care Systems (graduate), University of Duisburg-Essen, Summer 2024</li>
