--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -39,10 +39,16 @@ redirect_from:
 <body>
 
     <h2>Teaching Assistance</h2>
+
+    <h3>Paderborn University</h3>
     <ul>
-        <li>Statistics for Business Informatics (undergrad), Paderborn University, Summer 2025</li>
+        <li>Statistics for Information Systems (undergrad), Paderborn University, Summer 2025</li>
         <li>Microeconometrics (graduate), Paderborn University, Summer 2024, Summer 2025</li>
         <li>Empirical Economics (undergrad), Paderborn University, Summer 2024</li>
+    </ul>
+
+    <h3>University of Duisburg-Essen</h3>
+    <ul>
         <li>Health Care Systems (graduate), University of Duisburg-Essen, Summer 2024</li>
     </ul>
 
