--- a/_pages/research.html
+++ b/_pages/research.html
@@ -204,6 +204,33 @@ redirect_from:
             policies and (3) might cross-finance investments.
         </div>
     </div>
+
+
+
+<h1>Book Chapters</h1>
+
+ <div class="paper">
+        <p class="paper-title"><a href="https://link.springer.com/chapter/10.1007/978-3-031-80704-6_4">Digital Maturity Data: Extracting Insights for Health System Management</a></p>
+        <p class="paper-info">with Justus Vogel, Alexander Haering, David Ehlig, and Alexander Geissler
+        </p>
+        <p>In <i>Digital Maturity in Hospitals: Strategies, Frameworks, and Global Case Studies to Shape Future Healthcare</i> (pp. 43-54). Cham: Springer Nature Switzerland.</p>
+        <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
+        <div class="abstract">
+            With the Hospital Future Act, the German government has initiated a nationwide investment program of more than € 4.3 bn to increase the digital maturity of the country’s hospitals. As part of this program, an evaluation project called “DigitalRadar” has been set up. The evaluation goal is to assess whether the funding achieved its goal to increase hospitals’ digital maturity. To this end, the DigitalRadar project consortium has developed a digital maturity measure, the DigitalRadar score (DR-score). The DR-score is continuously scaled between 0 (not digitized) and 100 (fully digitized), providing detailed insights into hospitals’ digital maturity.   
+            The DR-score allows for detailed analyses yielding different kinds of insights for health care provision and health system management: For instance,
+            <ol>
+                <li>transparency of a hospital’s digital maturity,</li>
+                <li>the association of hospital profitability and digital maturity, and</li>
+                <li>the relationship between digital maturity and hospital quality.</li>
+            </ol>
+            Regarding (1), the transparency of hospitals’ digital maturity, the DR-score can be used to understand whether the investment in hospital digitalization from the Hospital Future Act has actually increased digital maturity. Moreover, analyses can reveal what specific aspects of hospital digitalization, e.g., clinical processes or medication management, are more or less developed than others.   
+            To investigate the relationship between digital maturity and (2) profitability or (3) hospital quality, the DR dataset needs to be matched to other datasets, e.g., structured hospital quality report cards. In this article, we describe the commonly used approach for matching hospitals and hospital sites with unique hospital identifiers and site numbers in German secondary datasets. Furthermore, we provide an overview of our findings from two studies investigating the relationship between profitability and digitalization as well as between digitalization and quality.   
+            In the first study, we find a positive, statistically significant relationship between profitability and digital maturity, i.e., more profitable hospitals are digitally more mature. More importantly, membership in a large hospital chain is associated with significantly higher DR-scores. Regarding quality, there is no consistent correlation between digitalization and quality for the two process quality indicators, and only a weak association for the two outcome quality indicators selected for investigation. We plan to challenge these findings and to investigate the effect from within hospital changes in digital maturity on provider quality using longitudinal data once the second measurement period for the DR-score will be completed in the second half of 2024.   
+            To support the generation of insights from digital maturity data for health system management, data quality must improve for matching datasets and for investigating the relationship between digital maturity, hospital profitability, and quality. Researchers must have access to nationwide databases containing financial statement data and quality indicators. Lastly, the digital maturity of hospitals must be measured continuously to monitor whether digitalization will reach its goal in increasing quality and decreasing cost of care.
+        </div>
+    </div>
+
+
 <!-- 
     <h1>Other Writing</h1>
     <p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital
