--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -42,14 +42,14 @@ redirect_from:
 
     <h3>Paderborn University</h3>
     <ul>
-        <li>Statistics for Information Systems (undergrad), Paderborn University, Summer 2025</li>
-        <li>Microeconometrics (graduate), Paderborn University, Summer 2024, Summer 2025</li>
-        <li>Empirical Economics (undergrad), Paderborn University, Summer 2024</li>
+        <li>Statistics for Information Systems (undergrad), Summer 2025</li>
+        <li>Microeconometrics (graduate), Summer 2024, Summer 2025</li>
+        <li>Empirical Economics (undergrad), Summer 2024</li>
     </ul>
 
     <h3>University of Duisburg-Essen</h3>
     <ul>
-        <li>Health Care Systems (graduate), University of Duisburg-Essen, Summer 2024</li>
+        <li>Health Care Systems (graduate), Summer 2024</li>
     </ul>
 
     <h2>Supervision</h2>
