--- a/_pages/research.html
+++ b/_pages/research.html
@@ -103,6 +103,7 @@ redirect_from:
         <p class="paper-title"><a href="https://s3joholl.github.io/files/education_lifecycle_effects.pdf">Life-cycle
                 Health Effects of Compulsory Schooling</a></p>
         <p class="paper-info">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
+        <p>Revision requested, <i>European Journal of Health Economics</i></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             We study the effect of education on health (hospital stays, number of diagnosed conditions, self-rated poor
