--- a/_pages/research.html
+++ b/_pages/research.html
@@ -80,22 +80,13 @@ redirect_from:
 
     <div class="paper">
         <p class="paper-title"><a
-                href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_24_1105.pdf">Gene-Environment
+                href="https://s3joholl.github.io/files/genes_resubmission.pdf">Gene-Environment
                 Interactions with Essential Heterogeneity</a></p>
         <p class="paper-info">with Hendrik Schmitz and Matthias Westphal</p>
         <p>Revision requested, <i>The Economic Journal</i></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            We show that two-stage least squares (2SLS) estimates of interactions can be misleading in settings with
-            essential heterogeneity (e.g., selection into gains) and where complier status to the instrument depends on
-            the interaction variable. The 2SLS estimator cannot disentangle interaction effects from shifts in complier
-            groups. Estimating marginal treatment effects addresses this problem by fixing the underlying population
-            and unobserved heterogeneity. We illustrate this using the example of gene-environment studies, where the
-            central parameter is the interaction effect between an endogenous, instrumented measure of environment
-            or behavior and a predetermined measure of genetic endowment. Our application examines the effect of
-            education on cognitive performance in old age. The results show complementarities between education and
-            genetic predisposition in determining cognitive abilities. The marginal treatment effect estimates reveal a
-            substantially larger gene-environment interaction, exceeding the 2SLS estimate by a factor of at least 2.5.
+            We study gene-environment interactions in the context of the long-term effect of education on cognition. Our central parameter of interest is the interaction effect between endogenous education and a predetermined measure of genetic endowment. Education is instrumented by a reform that raised compulsory schooling in England. We use this setting to show that two-stage least squares (2SLS) estimates of interaction effects can be misleading when there is essential heterogeneity (e.g., selection into gains) and complier status depends on the interaction variable. The 2SLS estimator cannot disentangle interaction effects from shifts in complier groups. Estimating marginal treatment effects addresses this problem by fixing the underlying population and unobserved heterogeneity. The results show complementarities between education and genetic predisposition in determining later-life memory, our measure of cognition. The marginal treatment effect estimates reveal a substantially larger gene-environment interaction, exceeding the 2SLS estimate by a factor of at least 4.7.
         </div>
     </div>
 
