--- a/_pages/research.html
+++ b/_pages/research.html
@@ -82,7 +82,7 @@ redirect_from:
         <p class="paper-title"><a
                 href="https://s3joholl.github.io/files/genes_resubmission.pdf">Gene-Environment
                 Interactions with Essential Heterogeneity</a></p>
-        <p class="paper-info">with Hendrik Schmitz and Matthias Westphal</p>
+        <p class="paper-info">with <a href="https://www.rwi-essen.de/en/rwi/team/person/hendrik-schmitz">Hendrik Schmitz</a> and <a href="https://sites.google.com/view/matthias-westphal/">Matthias Westphal</a></p>
         <p>Revision requested, <i>The Economic Journal</i></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
@@ -93,7 +93,7 @@ redirect_from:
     <div class="paper">
         <p class="paper-title"><a href="https://s3joholl.github.io/files/education_lifecycle_effects.pdf">Life-cycle
                 Health Effects of Compulsory Schooling</a></p>
-        <p class="paper-info">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
+        <p class="paper-info">with <a href="https://www.rwi-essen.de/en/rwi/team/person/hendrik-schmitz">Hendrik Schmitz</a> and <a href="https://www.mea-share.eu/people/beatrice-tawiah/">Beatrice Tawiah</a> </p>
         <p>Revision requested, <i>European Journal of Health Economics</i></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
