--- a/_pages/research.html
+++ b/_pages/research.html
@@ -117,7 +117,7 @@ redirect_from:
     <div class="paper">
         <p class="paper-title"><a href="https://www.nature.com/articles/s41598-024-74692-y">The Impact of Retirement
                 on Loneliness in Europe</a></p>
-        <p class="paper-info">with Sophie Guthmuller, Dörte Heger and Anna Werbeck</p>
+        <p class="paper-info">with <a href="https://www.wu.ac.at/en/institute-for-social-policy/team/wissenschaftlerinnen-am-institut/assistprof-dr-sophie-guthmuller">Sophie Guthmuller</a>, Dörte Heger and <a href="https://www.rwi-essen.de/rwi/team/person/anna-werbeck">Anna Werbeck</a></p>
         <p><i>Scientific Reports</i>, 2024, Vol. 14, Article number: 26971</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
@@ -140,7 +140,7 @@ redirect_from:
     <div class="paper">
         <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S2211883724000674">A
                 Nationwide Digital Maturity Assessment of Hospitals: Results From the German DigitalRadar</a></p>
-        <p class="paper-info">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander Haering
+        <p class="paper-info">with <a href="https://med.unisg.ch/en/person-detail/person-id/d1c7350f-b791-49a3-b645-7ff4ef99ea6e/">Alexander Geissler</a>, <a href="https://inav-berlin.de/team/malte-haring/?lang=en">Malte Haring</a>, <a href="https://www.mhh.de/institut-fuer-epidemiologie/mitarbeiterinnen/prof-dr-volker-amelung">Volker Amelung</a>, <a href="https://www.bihealth.org/en/research/research-groups/ehealth-and-interoperability/home/team">Sylvia Thun</a> and <a href="https://www.rwi-essen.de/en/rwi/team/person/alexander-haering">Alexander Haering</a> 
         </p>
         <p><i>Health Policy and Technology</i>, 2024, Vol. 13(4)</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
@@ -174,7 +174,7 @@ redirect_from:
         <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228">The
                 Association of Hospital Profitability and Digital Maturity – An Explorative Study Using Data From the
                 German DigitalRadar Project</a></p>
-        <p class="paper-info">with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler</p>
+        <p class="paper-info">with <a href="https://www.unisg.ch/en/university/about-us/organisation/detail/person-id/9acbc1c5-f703-41b5-8fd5-cfb5d2edc825/">Justus Vogel</a>, <a href="https://www.rwi-essen.de/en/rwi/team/person/alexander-haering">Alexander Haering</a>, <a href="https://www.rwi-essen.de/en/rwi/team/person/boris-augurzky">Boris Augurzky</a>, and <a href="https://med.unisg.ch/en/person-detail/person-id/d1c7350f-b791-49a3-b645-7ff4ef99ea6e/">Alexander Geissler</a></p>
         <p><i>Health Policy</i>, 2024, Vol. 142</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
@@ -203,7 +203,7 @@ redirect_from:
 
  <div class="paper">
         <p class="paper-title"><a href="https://link.springer.com/chapter/10.1007/978-3-031-80704-6_4">Digital Maturity Data: Extracting Insights for Health System Management</a></p>
-        <p class="paper-info">with Justus Vogel, Alexander Haering, David Ehlig, and Alexander Geissler
+        <p class="paper-info">with <a href="https://www.unisg.ch/en/university/about-us/organisation/detail/person-id/9acbc1c5-f703-41b5-8fd5-cfb5d2edc825/">Justus Vogel</a>, <a href="https://www.rwi-essen.de/en/rwi/team/person/alexander-haering">Alexander Haering</a>, <a href="https://www.unisg.ch/en/university/about-us/organisation/detail/person-id/61e835a2-c8ee-491c-ba97-75e2197b5a35/">David Ehlig</a> , and <a href="https://med.unisg.ch/en/person-detail/person-id/d1c7350f-b791-49a3-b645-7ff4ef99ea6e/">Alexander Geissler</a>
         </p>
         <p>In <i>Digital Maturity in Hospitals: Strategies, Frameworks, and Global Case Studies to Shape Future Healthcare</i> (pp. 43-54). Cham: Springer Nature Switzerland.</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
