--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -42,7 +42,7 @@ redirect_from:
 
     <h3>Paderborn University</h3>
     <ul>
-        <li>Statistics for Information Systems (undergrad), Summer 2025</li>
+        <li>Statistics (undergrad), Summer 2025</li>
         <li>Microeconometrics (graduate), Summer 2024, Summer 2025</li>
         <li>Empirical Economics (undergrad), Summer 2024</li>
     </ul>
