--- a/_pages/research.html
+++ b/_pages/research.html
@@ -79,11 +79,10 @@ redirect_from:
     <h1 style="margin-top: 0;">Work in Progress</h1>
 
     <div class="paper">
-        <p class="paper-title"><a
-                href="https://s3joholl.github.io/files/genes_resubmission.pdf">Gene-Environment
-                Interactions with Essential Heterogeneity</a></p>
-        <p class="paper-info">with <a href="https://www.rwi-essen.de/en/rwi/team/person/hendrik-schmitz">Hendrik Schmitz</a> and <a href="https://sites.google.com/view/matthias-westphal/">Matthias Westphal</a></p>
+        <p class="paper-title">Gene-Environment Interactions with Essential Heterogeneity</p>
+        <p class="paper-info">with Hendrik Schmit and Matthias Westphal</p>
         <p>Revision requested, <i>The Economic Journal</i></p>
+        <p><a href="https://s3joholl.github.io/files/genes_resubmission.pdf">Manuscript</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             We study gene-environment interactions in the context of the long-term effect of education on cognition. Our central parameter of interest is the interaction effect between endogenous education and a predetermined measure of genetic endowment. Education is instrumented by a reform that raised compulsory schooling in England. We use this setting to show that two-stage least squares (2SLS) estimates of interaction effects can be misleading when there is essential heterogeneity (e.g., selection into gains) and complier status depends on the interaction variable. The 2SLS estimator cannot disentangle interaction effects from shifts in complier groups. Estimating marginal treatment effects addresses this problem by fixing the underlying population and unobserved heterogeneity. The results show complementarities between education and genetic predisposition in determining later-life memory, our measure of cognition. The marginal treatment effect estimates reveal a substantially larger gene-environment interaction, exceeding the 2SLS estimate by a factor of at least 4.7.
