--- a/_pages/research.html
+++ b/_pages/research.html
@@ -90,10 +90,10 @@ redirect_from:
     </div>
 
     <div class="paper">
-        <p class="paper-title"><a href="https://s3joholl.github.io/files/education_lifecycle_effects.pdf">Life-cycle
-                Health Effects of Compulsory Schooling</a></p>
-        <p class="paper-info">with <a href="https://www.rwi-essen.de/en/rwi/team/person/hendrik-schmitz">Hendrik Schmitz</a> and <a href="https://www.mea-share.eu/people/beatrice-tawiah/">Beatrice Tawiah</a> </p>
+        <p class="paper-title">Life-cycle Health Effects of Compulsory Schooling</p>
+        <p class="paper-info">with Hendrik Schmitz and Beatrice Tawiah</p>
         <p>Revision requested, <i>European Journal of Health Economics</i></p>
+        <p><a href="https://s3joholl.github.io/files/education_lifecycle_effects.pdf">Manuscript</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             We study the effect of education on health (hospital stays, number of diagnosed conditions, self-rated poor
@@ -114,10 +114,10 @@ redirect_from:
 
 
     <div class="paper">
-        <p class="paper-title"><a href="https://www.nature.com/articles/s41598-024-74692-y">The Impact of Retirement
-                on Loneliness in Europe</a></p>
-        <p class="paper-info">with <a href="https://www.wu.ac.at/en/institute-for-social-policy/team/wissenschaftlerinnen-am-institut/assistprof-dr-sophie-guthmuller">Sophie Guthmuller</a>, Dörte Heger and <a href="https://www.rwi-essen.de/rwi/team/person/anna-werbeck">Anna Werbeck</a></p>
+        <p class="paper-title">The Impact of Retirement on Loneliness in Europe</p>
+        <p class="paper-info">with Sophie Guthmuller, Dörte Heger and Anna Werbeck</p>
         <p><i>Scientific Reports</i>, 2024, Vol. 14, Article number: 26971</p>
+        <p><a href="https://www.nature.com/articles/s41598-024-74692-y">Article</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             This article investigates the short- and long-term impacts of retirement on loneliness using panel data from
@@ -137,11 +137,10 @@ redirect_from:
     <h2>Health Policy</h2>
 
     <div class="paper">
-        <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S2211883724000674">A
-                Nationwide Digital Maturity Assessment of Hospitals: Results From the German DigitalRadar</a></p>
-        <p class="paper-info">with <a href="https://med.unisg.ch/en/person-detail/person-id/d1c7350f-b791-49a3-b645-7ff4ef99ea6e/">Alexander Geissler</a>, <a href="https://inav-berlin.de/team/malte-haring/?lang=en">Malte Haring</a>, <a href="https://www.mhh.de/institut-fuer-epidemiologie/mitarbeiterinnen/prof-dr-volker-amelung">Volker Amelung</a>, <a href="https://www.bihealth.org/en/research/research-groups/ehealth-and-interoperability/home/team">Sylvia Thun</a>, and <a href="https://www.rwi-essen.de/en/rwi/team/person/alexander-haering">Alexander Haering</a> 
-        </p>
+        <p class="paper-title">A Nationwide Digital Maturity Assessment of Hospitals: Results From the German DigitalRadar</p>
+        <p class="paper-info">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun, and Alexander Haering</p>
         <p><i>Health Policy and Technology</i>, 2024, Vol. 13(4)</p>
+        <p><a href="https://www.sciencedirect.com/science/article/pii/S2211883724000674">Article</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             In 2019, the German government established the Hospital Future Fund, allocating 4.3 billion Euros, to
@@ -170,11 +169,10 @@ redirect_from:
     </div>
 
     <div class="paper">
-        <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228">The
-                Association of Hospital Profitability and Digital Maturity – An Explorative Study Using Data From the
-                German DigitalRadar Project</a></p>
-        <p class="paper-info">with <a href="https://www.unisg.ch/en/university/about-us/organisation/detail/person-id/9acbc1c5-f703-41b5-8fd5-cfb5d2edc825/">Justus Vogel</a>, <a href="https://www.rwi-essen.de/en/rwi/team/person/alexander-haering">Alexander Haering</a>, <a href="https://www.rwi-essen.de/en/rwi/team/person/boris-augurzky">Boris Augurzky</a>, and <a href="https://med.unisg.ch/en/person-detail/person-id/d1c7350f-b791-49a3-b645-7ff4ef99ea6e/">Alexander Geissler</a></p>
+        <p class="paper-title">The Association of Hospital Profitability and Digital Maturity – An Explorative Study Using Data From the German DigitalRadar Project</p>
+        <p class="paper-info">with Justus Vogel, Alexander Haering, Boris Augurzky, and Alexander Geissler</p>
         <p><i>Health Policy</i>, 2024, Vol. 142</p>
+        <p><a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228">Article</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             German hospitals largely rely on public investments for digitization. As these have been insufficient,
@@ -201,10 +199,10 @@ redirect_from:
 <h1>Book Chapters</h1>
 
  <div class="paper">
-        <p class="paper-title"><a href="https://link.springer.com/chapter/10.1007/978-3-031-80704-6_4">Digital Maturity Data: Extracting Insights for Health System Management</a></p>
-        <p class="paper-info">with <a href="https://www.unisg.ch/en/university/about-us/organisation/detail/person-id/9acbc1c5-f703-41b5-8fd5-cfb5d2edc825/">Justus Vogel</a>, <a href="https://www.rwi-essen.de/en/rwi/team/person/alexander-haering">Alexander Haering</a>, <a href="https://www.unisg.ch/en/university/about-us/organisation/detail/person-id/61e835a2-c8ee-491c-ba97-75e2197b5a35/">David Ehlig</a>, and <a href="https://med.unisg.ch/en/person-detail/person-id/d1c7350f-b791-49a3-b645-7ff4ef99ea6e/">Alexander Geissler</a>
-        </p>
+        <p class="paper-title">Digital Maturity Data: Extracting Insights for Health System Management</p>
+        <p class="paper-info">with Justus Vogel, Alexander Haering, David Ehlig, and Alexander Geissler</p>
         <p>In <i>Digital Maturity in Hospitals: Strategies, Frameworks, and Global Case Studies to Shape Future Healthcare</i> (pp. 43-54). Cham: Springer Nature Switzerland.</p>
+        <p><a href="https://link.springer.com/chapter/10.1007/978-3-031-80704-6_4">Chapter</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             With the Hospital Future Act, the German government has initiated a nationwide investment program of more than € 4.3 bn to increase the digital maturity of the country’s hospitals. As part of this program, an evaluation project called “DigitalRadar” has been set up. The evaluation goal is to assess whether the funding achieved its goal to increase hospitals’ digital maturity. To this end, the DigitalRadar project consortium has developed a digital maturity measure, the DigitalRadar score (DR-score). The DR-score is continuously scaled between 0 (not digitized) and 100 (fully digitized), providing detailed insights into hospitals’ digital maturity.   
