--- a/_pages/research.html
+++ b/_pages/research.html
@@ -80,7 +80,7 @@ redirect_from:
 
     <div class="paper">
         <p class="paper-title">Gene-Environment Interactions with Essential Heterogeneity</p>
-        <p class="paper-info">with Hendrik Schmit and Matthias Westphal</p>
+        <p class="paper-info">with Hendrik Schmitz and Matthias Westphal</p>
         <p>Revision requested, <i>The Economic Journal</i></p>
         <p><a href="https://s3joholl.github.io/files/genes_resubmission.pdf">Manuscript</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
