--- a/_pages/research.html
+++ b/_pages/research.html
@@ -92,7 +92,7 @@ redirect_from:
     <div class="paper">
         <p class="paper-title">Life-cycle Health Effects of Compulsory Schooling</p>
         <p class="paper-info">with Hendrik Schmitz and Beatrice Tawiah</p>
-        <p>Revision requested, <i>European Journal of Health Economics</i></p>
+        <p>Accepted, <i>European Journal of Health Economics</i></p>
         <p><a href="https://s3joholl.github.io/files/education_lifecycle_effects.pdf">Manuscript</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
