--- a/_pages/research.html
+++ b/_pages/research.html
@@ -82,10 +82,10 @@ redirect_from:
         <p class="paper-title">Gene-Environment Interactions with Essential Heterogeneity</p>
         <p class="paper-info">with Hendrik Schmitz and Matthias Westphal</p>
         <p>Conditionally accepted, <i>The Economic Journal</i></p>
-        <p><a href="https://s3joholl.github.io/files/genes_resubmission.pdf">Manuscript</a></p>
+        <p><a href="https://s3joholl.github.io/files/genes_accepted_version.pdf">Manuscript</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            We study gene-environment interactions in the context of the long-term effect of education on cognition. Our central parameter of interest is the interaction effect between endogenous education and a predetermined measure of genetic endowment. Education is instrumented by a reform that raised compulsory schooling in England. We use this setting to show that two-stage least squares (2SLS) estimates of interaction effects can be misleading when there is essential heterogeneity (e.g., selection into gains) and complier status depends on the interaction variable. The 2SLS estimator cannot disentangle interaction effects from shifts in complier groups. Estimating marginal treatment effects addresses this problem by fixing the underlying population and unobserved heterogeneity. The results show complementarities between education and genetic predisposition in determining later-life memory, our measure of cognition. The marginal treatment effect estimates reveal a substantially larger gene-environment interaction, exceeding the 2SLS estimate by a factor of at least 4.7.
+            We study how gene-environment interactions between education and genetic endowments affect cognition in old age and use this setting to show that – even with a valid instrument – two-stage least squares (2SLS) estimates of interaction effects can be far away from the true effect. This is the case when treatment effects are heterogeneous and compliance to the instrument depends on the interaction variable. We suggest estimating marginal treatment effects to address this problem. Our estimation results show complementarities between education and genetic predisposition in determining later-life memory. The marginal treatment effect estimates suggest substantially larger gene-environment interactions than the 2SLS estimates.
         </div>
     </div>
 
