--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -53,7 +53,7 @@ redirect_from:
     </ul>
 
     <h2>Supervision</h2>
-    <p>So far, I've supervised three empirical Master theses in health and behavioral economics at Paderborn University.</p>
+    <p>So far, I've supervised four empirical Master theses in health and behavioral economics at Paderborn University.</p>
 
 </body>
 
