--- a/_pages/research.html
+++ b/_pages/research.html
@@ -78,28 +78,23 @@ redirect_from:
     </div>
   </div>
 
-  <div class="paper">
+  <h1>Journal Articles</h1>
+  <h2>Economics and General Interest</h2>
+
+    <div class="paper">
     <p class="paper-title">
-      <a class="paper-title-link" href="https://s3joholl.github.io/files/education_lifecycle_effects.pdf">
-        Life-cycle Health Effects of Compulsory Schooling
+      <a class="paper-title-link" href="https://rdcu.be/eYK6E">
+        Life-cycle health effects of compulsory schooling
       </a>
     </p>
     <p class="paper-info">with Hendrik Schmitz and Beatrice Tawiah</p>
-    <p>Accepted, <i>European Journal of Health Economics</i></p>
+    <p><i>The European Journal of Health Economics</i>, forthcoming</p>
     <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
     <div class="abstract">
-      We study the effect of education on health (hospital stays, number of diagnosed conditions, self-rated poor health,
-      and obesity) over the life-cycle using German compulsory schooling reforms as a source of exogenous variation. Our
-      results show clear correlations between educational attainment and better health across all age groups (30 to 79).
-      However, we do not find causal effects of an additional year of schooling on health or health care utilization,
-      neither earlier, nor later in life. One reason for this may be that while the compulsory schooling reforms
-      succeeded in raising the educational attainment of those that were targeted — individuals at the lowest education
-      margin — they did not result in healthier employment opportunities.
+      We study the effect of education on health (hospital stays, number of diagnosed conditions, poor or bad self-rated health, and body mass index) over the life cycle, using German compulsory schooling reforms as a source of exogenous variation. Our results show clear correlations between educational attainment and better health across all age groups (30 to 74). However, we do not find causal relationships between additional schooling and health or health care utilization, neither earlier nor later in life. A simulated ex-post power analysis shows that this is not due to a lack of statistical power. One reason for the absence of effects may be that the studied compulsory schooling reforms succeeded in raising the educational attainment of the target group - individuals at the lowest educational margin - but did not lead to healthier employment opportunities.
     </div>
   </div>
 
-  <h1>Journal Articles</h1>
-  <h2>Economics and General Interest</h2>
 
   <div class="paper">
     <p class="paper-title">
