--- a/_pages/research.html
+++ b/_pages/research.html
@@ -98,7 +98,7 @@ redirect_from:
 
   <div class="paper">
     <p class="paper-title">
-      <a class="paper-title-link" href="https://www.nature.com/articles/s41598-024-74692-y">
+      <a class="paper-title-link" href="https://rdcu.be/eYLak">
         The Impact of Retirement on Loneliness in Europe
       </a>
     </p>
